Fix z-index

--- a/src/assets/styles/components/topNavbar.css
+++ b/src/assets/styles/components/topNavbar.css
@@ -3,9 +3,7 @@
   justify-content: flex-end;
   align-items: center;
   position: fixed;
-  z-index: 10; /*bring the navbar to first element(without it,
-  welcome-img will take up all the space covering
-  title-subtitle and navbar)*/
+  z-index: 2;
   top: -100px;
   width: 100%;
   height: 0;
@@ -42,6 +40,8 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  position: absolute;
+  z-index: 1;
   background: transparent;
   width: 100%;
 }
